# rydia

./: .gitignore  LICENSE  Makefile  README.md
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: lib.rs  main.rs  system.rs
kernel/src/arch/: cpu.rs  fb.rs  gpio.rs  mbox.rs  mod.rs  page.rs  raspi.rs  spin.rs  timer.rs  uart.rs
kernel/src/arch/arm64/: cpu.rs  mod.rs  page.rs  spin.rs
kernel/src/arch/arm64/raspi/: fb.rs  gpio.rs  mbox.rs  mod.rs  timer.rs  uart.rs
kernel/src/fw/dt/: mod.rs
kernel/src/io/: emcon.rs  font.rs  mod.rs  uart.rs
kernel/src/mem/: alloc.rs  mm.rs  mmio.rs  mod.rs
kernel/src/raspi/: gpio.rs  mod.rs  uart.rs
kernel/src/sync/: fifo.rs  mod.rs  spinlock.rs
lib/meggl/: Cargo.toml
lib/meggl/src/: lib.rs
